# ZkAttestifyLocal

./: .gitignore  README.md  receipt.json
docker/: verifyAttestation.Dockerfile
host/: Cargo.toml
host/src/: helper.rs  input.json  main.rs  structs.rs  zk_proof.rs
methods/: build.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
