[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
bincode = "1.3.3"
clap = {version = "4.3.0", features = ["derive","string"]}
risc0-zkvm = { version = "1.1.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
ethers-core = { version = "2.0.14"}
chrono = "=0.4.38"
serde_json = "1.0.127"
sha2 = "0.10.8"
hex = "0.4"
anyhow = "1.0.89"

